Enhance email configuration and add confirmation email functionality